--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/atc_jpashop?useSSL=FALSE&serverTimezone=UTC
-    username: root
+    url: jdbc:h2:tcp://localhost/~/atc_jpashop
+    username: sa
     password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
